inventory - workflow search